# rocket-api

./: Cargo.toml  README.md  Rocket.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal  diesel.toml
migrations/2025-01-29-075515_create_rustaceans/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs  schema.rs
