[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version =  "0.5.0-rc" , features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
base64 = "0.20.0"
diesel = { version = "2.2.6", features = ["sqlite", "r2d2"]}
rusqlite = { version = "0.31", features = ["bundled"] }
rocket_sync_db_pools = { version = "0.1.0-rc" , features = ["diesel_sqlite_pool"]}
chrono = {version  = "0.4.39", features = ["serde"]}
diesel_migrations = "2.0.0"